# data_pipeline

./: app.py  docker-compose.yml  downloaded_raw_data_20240823114104.parquet  pyproject.toml  test_minio.py
data_pipeline/: clickhouse_client.py
data_pipeline/testes/: test_clickhouse_client.py
sql/: create_view.sql
